[package]
name = "whitespace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "http2", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = { version = "0.10" }
ring = { version = "0.17" }
url = { version = "2.5" }
base64 = { version = "0.22" }